apps/tell-the-time/deployment/manifests/namepsace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ns-tell-the-time
  labels:
    name: ns-tell-the-time
    istio-injection: enabled
