apps/tell-the-time/deployment/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-time-now
  namespace: app-time-now
  labels:
    project: google
    app: time-now
    cost-center: google-0001
spec:
  replicas: 3
  selector:
    matchLabels:
      app: time-now
  template:
    metadata:
      labels:
        app: time-now
    spec:
      containers:
      - name: app-time-now
        image: gcr.io/cloudrun/hello
        ports:
        - containerPort: 8080
