apps/tell-the-time/deployment/manifests/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-pasta
  namespace: app-pasta
  labels:
    project: google
    app: pasta
    cost-center: google-0001
spec: 
  selector: 
    app: pasta
  ports: 
  - name: http
    port: 8080
    protocol: TCP
