apps/tell-the-time/deployment/manifests/virtualService.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-time-now
  namespace: app-time-now
spec: 
  gateways:
  - istio-system/ingress-gateway
  hosts: 
  - "apps.v3.lcl.time-keeper.watch"
  http:
  - match:
    - uri:
        prefix: /
    route: 
    - destination: 
        host: app-time-now.app-time-now.svc.cluster.local
        port: 
          number: 8080
